--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <ul>
     <li><a href="mapTest.html">Test Map</a></li>
     <li><a href="termCountBarChart.html">Term Count Bar Chart</a></li>
+    <li><a href="topEmployers.html">Top Employers</a></li>
 </ul>
 </body>
 <html>
