--- a/topEmployers.html
+++ b/topEmployers.html
@@ -16,6 +16,8 @@ svg {
 
 </style>
 <body>
+    <p>Top Employers</p>
+</body>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
     var radius = 44,
@@ -23,6 +25,8 @@ svg {
     var color = d3.scale.ordinal().range(["#98abc5","#8a89a6"]);
     var arc = d3.svg.arc().outerRadius(radius).innerRadius(radius-30);
     var pie = d3.layout.pie().sort(null).value(function(d) {return d.Employer});
+
+    var topEmployersObjList = [];
 
     d3.csv("dataset.csv", function(error,data){
         if (error) throw error;
@@ -98,8 +102,10 @@ svg {
             }
             stringToLog += "}";
             console.log(stringToLog);
+            topEmployersObjList.push(topEmployersObj[key]);
+            document.write("<p><h2>"+name+"</h2>" + "<h4>Hired: " + val + "</h4></p>");
         }
-        console.log(topEmployersObj);
+        console.log(topEmployersObj);        
     });
 </script>
     
