--- a/mapTest.html
+++ b/mapTest.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Non-Contiguous Cartogram</title>
 <style>
-
-.land {
-  fill: #fff;
+.land-glow{
+    fill: none;
+    stroke: #111;
+}
+.counties {
+  fill: none;
   stroke: #ccc;
 }
 
-.state {
-  fill: #ccc;
-  stroke: #666;
+.states {
+  fill: none;
+  stroke: #111;
+  stroke-linejoin: round;
 }
-
 
 .q0-9 { fill:rgb(247,251,255); }
 .q1-9 { fill:rgb(222,235,247); }
@@ -24,17 +26,17 @@
 .q7-9 { fill:rgb(8,81,156); }
 .q8-9 { fill:rgb(8,48,107); }
 
-
 </style>
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
+<script src="//d3js.org/queue.v1.min.js"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <script>
-var path = d3.geo.path();
 
-var svg = d3.select("body").append("svg")
-    .attr("width", 960)
-    .attr("height", 500);
+var width = 960,
+    height = 600;
+
+var rateById = d3.map();
 
 d3.csv("dataset.csv", function(error, data) {
     if (error) throw error;
@@ -65,29 +67,48 @@ d3.csv("dataset.csv", function(error, data) {
     
   //replace data with termCounts array
   data = termCounts;
+  
+  queue()
+    .defer(d3.json, "us.json")
+    //.defer(d3.tsv, "unemployment.tsv", function(d) { rateById.set(d.id, +d.rate); })
+    
+    .await(ready);
 });
 
 var quantize = d3.scale.quantize()
-    .domain([0, d3.max(data.count)])
+    .domain([0, .15])
     .range(d3.range(9).map(function(i) { return "q" + i + "-9"; }));
 
-d3.json("us.json", function(error, us) {
+var projection = d3.geo.albersUsa()
+    .scale(1280)
+    .translate([width / 2, height / 2]);
+
+var path = d3.geo.path()
+    .projection(projection);
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height", height);
+
+
+
+function ready(error, us) {
   if (error) throw error;
 
-  svg.append("path")
-      .datum(topojson.feature(us, us.objects.land))
-      .attr("class", "land")
+  svg.append("g")
+      .attr("class", "counties")
+    .selectAll("path")
+      .data(topojson.feature(us, us.objects.counties).features)
+    .enter().append("path")
+      .attr("class", function(d) { return quantize(rateById.get(d.id)); })
       .attr("d", path);
 
-  svg.selectAll(".state")
-      .data(topojson.feature(us, us.objects.states).features)
-    .enter().append("path")
-      .attr("class", "state")
-      .attr("d", path)
-      .attr("class", function(d) { return quantize(rateById.get(d.id)); })
-      .style("stroke-width", function(d) {
-        return 1 / Math.sqrt(valueById[d.id] * 5 || 1);
-      });
-});
+  svg.append("path")
+      .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
+      .attr("class", "states")
+      .attr("d", path);
+}
+
+d3.select(self.frameElement).style("height", height + "px");
 
 </script>
