--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <!--Import jQuery before materialize.js-->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+        <title>TigerCharts</title>
+    </head>
 <body>
-<h1>Tiger Charts</h1>
-<p><h4>Directory</h4></p>
-<ul>
-    <li><a href="mapTest.html">Test Map</a></li>
-    <li><a href="termCountBarChart.html">Term Count Bar Chart</a></li>
-    <li><a href="topEmployers.html">Top Employers</a></li>
-</ul>
+    <div class="row">
+        <div class="container">
+            <div class="col s12">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>Chart here</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>Chart here</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>Chart here</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>Chart here</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <html>
