Started to add the map

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
         <script src="//d3js.org/d3.v3.min.js"></script>
+        <script src="//d3js.org/queue.v1.min.js"></script>
+        <script src="//d3js.org/topojson.v1.min.js"></script>
         <script src="scripts.js"></script>
         <title>TigerCharts</title>
     </head>
@@ -29,6 +31,7 @@
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title">Card Title</span>
+                        <div id="map_employment"></div>
                         <p>Chart here</p>
                     </div>
                 </div>
