Changed some colors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
         <script src="//d3js.org/d3.v3.min.js"></script>
         <script src="scripts.js"></script>
+        <!-- Import Roboto Font -->
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
         <title>TigerCharts</title>
     </head>
 <body>
