--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col s12">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
+                        <span class="card-title">Top Employers</span>
                         <div id="chart_top_employers"></div>
                         <p>Chart description optionally here</p>
                     </div>
@@ -41,8 +41,8 @@
             <div class="col s12">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>Chart here</p>
+                        <span class="card-title">Top Employed Majors</span>
+                        <div id="chart_top_employed_majors"></div>
                     </div>
                 </div>
             </div>
