--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <meta charset="utf-8">
 <html>
     <head>
+        <link rel="shortcut icon" href="https://people.rit.edu/wef9308/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://people.rit.edu/wef9308/favicon.ico" type="image/x-icon">
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
         <script src="//d3js.org/d3.v3.min.js"></script>
@@ -18,10 +21,25 @@
         <title>TigerCharts</title>
     </head>
 <body>
+    <div class="navbar-fixed" style="height: 110px;">
+        <ul id="dropdown1" class="dropdown-content">
+            <li><a href="https://people.rit.edu/wef9308/#TopEmployers" style="color: #f36e21;">Top Employers</a></li>
+            <li><a href="https://people.rit.edu/wef9308/#Map" style="color: #f36e21;">Map</a></li>
+        </ul>
+        <nav>
+            <div class="nav-wrapper grey lighten-3">
+                    <img src="images/Logo.png" class="img" style="height: 100%;">
+                    <ul class="right hide-on-med-and-down">
+                        <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons" style="color: #f36e21;">arrow_drop_down</i></a></li>
+                    </ul>
+                
+            </div>
+        </nav>
+    </div>
     <div class="row">
         <div class="container">
             <div class="col s12">
-                <div class="card blue-grey darken-1">
+                <div class="card light-blue" id="TopEmployers">
                     <div class="card-content white-text">
                         <span class="card-title">Top Employers</span>
                         <div id="chart_top_employers"></div>
@@ -29,9 +47,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
+            <div class="col s12" id="Map">
+                <div class="card white">
+                    <div class="card-content black-text">
                         <span class="card-title">Card Title</span>
                         <div id="map_employment"></div>
                         <p>Chart here</p>
