--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <div class="col s12">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
-                        <p>Chart here</p>
+                        <span class="card-title">Employer Trends</span>
+                        <div id="chart_employer_trends"></div>
                     </div>
                 </div>
             </div>
