Changed some colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <title>TigerCharts</title>
     </head>
 <body>
-    <div class="navbar-fixed" style="height: 110px;">
+    <div class="navbar-fixed orange lighten-3" style="height: 110px;">
         <ul id="dropdown1" class="dropdown-content">
             <li><a href="https://people.rit.edu/wef9308/#TopEmployers" style="color: #f36e21;">Top Employers</a></li>
             <li><a href="https://people.rit.edu/wef9308/#Map" style="color: #f36e21;">Map</a></li>
@@ -36,10 +36,10 @@
             </div>
         </nav>
     </div>
-    <div class="row">
+    <div class="row orange lighten-3">
         <div class="container">
             <div class="col s12">
-                <div class="card light-blue" id="TopEmployers">
+                <div class="card light-blue accent-2" id="TopEmployers">
                     <div class="card-content white-text">
                         <span class="card-title">Top Employers</span>
                         <div id="chart_top_employers"></div>
