Updated navigation links

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <meta charset="utf-8">
 <html>
     <head>
-        <link rel="shortcut icon" href="https://people.rit.edu/wef9308/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="https://people.rit.edu/wef9308/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <!-- Compiled and minified CSS -->
@@ -23,8 +23,8 @@
 <body>
     <div class="navbar-fixed orange lighten-3" style="height: 110px;">
         <ul id="dropdown1" class="dropdown-content">
-            <li><a href="https://people.rit.edu/wef9308/#TopEmployers" style="color: #f36e21;">Top Employers</a></li>
-            <li><a href="https://people.rit.edu/wef9308/#Map" style="color: #f36e21;">Map</a></li>
+            <li><a href="#TopEmployers" style="color: #f36e21;">Top Employers</a></li>
+            <li><a href="#Map" style="color: #f36e21;">Map</a></li>
         </ul>
         <nav>
             <div class="nav-wrapper grey lighten-3">
