--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
         
     </head>
 <body>
+    <!-- class nav is used instead of element <nav> to avoid style clash with materialize -->
+    <div class="nav">
+        <!-- NavBar elements for desktops -->
+        <a class='desktop active' href='#home'>TigerCharts</a>
+        <a class='desktop' href='#topEmployers'>Top Employers</a>
+        <a class='desktop' href='#employmentMap'>Employment Map</a>
+        <a class='desktop' href='#topMajors'>Top Employed Majors</a>
+        <a class='desktop' href='#trends'>Employer Trends</a>
+    </div>    
+    <!-- Old Navbar
     <div class="navbar-fixed orange lighten-3" style="height: 110px;">
         <ul id="dropdown1" class="dropdown-content">
             <li><a href="#TopEmployers" style="color: #f36e21;">Top Employers</a></li>
@@ -56,6 +66,7 @@
             </div>
         </nav>
     </div>
+    -->
     <div class="row orange lighten-3">
         <div class="container">
             <div class="col s12">
