materialize side nav for mobile

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <a href="#" data-activates="mobile-demo" class="button-collapse" id="hamburger-menu"><i class="material-icons">menu</i></a>
         <!-- TigerCharts collapsed text -->
         <h2 class='mobile mob-nav-header' style='font-size: 24px; text-align: left; color: white; padding:0; margin: 0; position: relative; top: -5px; font-weight: 300'>TigerCharts</h2>
-        <div class="side-nav" id='mobile-nav'>
-            <ul id="mobile-demo">
+        <div  >
+            <ul class="side-nav" id="mobile-demo">
                 <li><a class='mobile active' href='#home'>TigerCharts</a></li>
                 <li><a class='mobile' href='#topEmployers'>Top Employers</a></li>
                 <li><a class='mobile' href='#employmentMap'>Employment Map</a></li>
-                <li><a class='mobile' href='#topMajors'>Top Employed Majors</a></li>
+                <li><a class='mobile' href='#topMajors'>Top Majors</a></li>
                 <li><a class='mobile' href='#trends'>Employer Trends</a></li>
             </ul>
         </div>
