--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <a class='mobile' href='#trends'>Employer Trends</a>
         </div>
     </div>    
-    <div class="row orange lighten-3">
+    <div class="row">
         <div class="container">
             <div class="col s12">
                 <div class="card light-blue accent-2" id="TopEmployers">
@@ -136,6 +136,7 @@
                     </div>
                 </div>
             </div>
+            
             <div class="col s12">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
@@ -154,5 +155,6 @@
             </div>
         </div>
     </div>
+    <div class='bg-image' style='background-image: url(./images/JT.jpg)'>
 </body>
 <html>
