Small HTML formatting changes

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="row">
         <div class="container">
             <div class="col s12">
-                <div class="card light-blue accent-2" id="TopEmployers">
+                <div class="card blue-grey darken-1" id="TopEmployers">
                     <div class="card-content white-text">
                         <span class="card-title">Top Employers</span>
                         <div id="chart_top_employers"></div>
@@ -127,16 +127,24 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="container">
             <div class="col s12" id="Map">
-                <div class="card white">
-                    <div class="card-content black-text">
-                        <span class="card-title">Card Title</span>
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Employment Map</span>
                         <div id="map_employment"></div>
                         <p>Chart here</p>
                     </div>
                 </div>
             </div>
-            
+        </div>
+    </div>
+    <div class='bg-image' style='background-image: url(./images/JT.jpg)'></div>
+    <div class="row">
+        <div class="container">
             <div class="col s12">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
@@ -145,6 +153,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="container">
             <div class="col s12">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
@@ -154,7 +166,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class='bg-image' style='background-image: url(./images/JT.jpg)'>
+    </div>    
+    <div class='bg-image' style='background-image: url(./images/JT.jpg)'></div>
 </body>
 <html>
