--- a/index.html
+++ b/index.html
@@ -123,8 +123,18 @@
                 <a class='mobile jumpLink' href='#topMajors'>Top Majors</a>
                 <a class='mobile jumpLink' href='#trends'>Employer Trends</a>
             </div>
+        </div>
+        <div class='page background' id='home'>
+            <div class='center-vertical plus-nav center'>
+                <img id="logo" src="./images/Logo.png" alt="TigerCharts Logo" />
+                <h3 style='text-align: center; color: white; position: relative; top: 48px;'>Welcom to the Dev Build</h3>
+                <br>
+                <p>
+                    <em>This is a work in progress and is not yet complete</em>
+                </p>
+            </div>
         </div>    
-        <div class="row" id="home">
+        <div class="row">
             <div class="container">
                 <div class="col s12" id="topEmployers">
                     <div class="card blue-grey darken-1" >
