top employer bars size calculated with window size and other heirarchy changes

--- a/index.html
+++ b/index.html
@@ -124,14 +124,13 @@
                 <a class='mobile jumpLink' href='#trends'>Employer Trends</a>
             </div>
         </div>
+        <!-- Intro Screen Fill with logo and background image -->
         <div class='page background' id='home'>
             <div class='center-vertical plus-nav center'>
                 <img id="logo" src="./images/Logo.png" alt="TigerCharts Logo" />
                 <h3 style='text-align: center; color: white; position: relative; top: 48px;'>Welcom to the Dev Build</h3>
                 <br>
-                <p>
-                    <em>This is a work in progress and is not yet complete</em>
-                </p>
+                <p><em>This is a work in progress and is not yet complete</em></p>
             </div>
         </div>    
         <div class="row">
@@ -139,7 +138,7 @@
                 <div class="col s12" id="topEmployers">
                     <div class="card blue-grey darken-1" >
                         <div class="card-content white-text">
-                            <span class="card-title">Top Employers</span>
+                            <h1>Top Employers</h1>
                             <div id="chart_top_employers"></div>
                             <p>Chart description optionally here</p>
                         </div>
