--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col s12" id="employmentMap">
                     <div class="card blue-grey darken-1">
                         <div class="card-content white-text">
-                            <span class="card-title">Employment Map</span>
+                            <h1>Employment Map</h1>
                             <div id="map_employment"></div>
                             <p>Chart here</p>
                         </div>
@@ -165,7 +165,7 @@
                 <div class="col s12" id="topMajors">
                     <div class="card blue-grey darken-1">
                         <div class="card-content white-text">
-                            <span class="card-title">Top Employed Majors</span>
+                            <h1>Top Employed Majors</h1>
                             <div id="chart_top_employed_majors"></div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                 <div class="col s12" id="trends">
                     <div class="card blue-grey darken-1">
                         <div class="card-content white-text">
-                            <span class="card-title">Employer Trends</span>
+                            <h1>Employer Trends</h1>
                             <div id="chart_employer_trends"></div>
                         </div>
                     </div>
