--- a/index.html
+++ b/index.html
@@ -146,11 +146,10 @@
         <div class="row">
             <div class="container">
                 <div class="col s12" id="topEmployers">
-                    <div class="card blue-grey darken-1" >
+                    <div class="card grey darken-3" >
                         <div class="card-content white-text">
                             <h1>Top Employers</h1>
                             <div id="chart_top_employers"></div>
-                            <p>Chart description optionally here</p>
                         </div>
                     </div>
                 </div>
@@ -159,11 +158,10 @@
         <div class="row">
             <div class="container">
                 <div class="col s12" id="employmentMap">
-                    <div class="card blue-grey darken-1">
+                    <div class="card grey darken-3">
                         <div class="card-content white-text">
                             <h1>Employment Map</h1>
                             <div id="map_employment"></div>
-                            <p>Chart here</p>
                         </div>
                     </div>
                 </div>
@@ -173,7 +171,7 @@
         <div class="row">
             <div class="container">
                 <div class="col s12" id="topMajors">
-                    <div class="card blue-grey darken-1">
+                    <div class="card grey darken-3">
                         <div class="card-content white-text">
                             <h1>Top Employed Majors</h1>
                             <div id="chart_top_employed_majors"></div>
@@ -185,7 +183,7 @@
         <div class="row">
             <div class="container">
                 <div class="col s12" id="trends">
-                    <div class="card blue-grey darken-1">
+                    <div class="card grey darken-3">
                         <div class="card-content white-text">
                             <h1>Employer Trends</h1>
                             <div id="chart_employer_trends"></div>
