bar charts responsive resize

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- TODO LIST
  - The bars in the top employers section are the wrong color orange
  - Replace JT with other images
- 
+ - More spacing between section title words
 
 
 
