--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <!-- class nav is used instead of element <nav> to avoid style clash with materialize -->
         <div class="nav">
             <!-- NavBar elements for desktops -->
-            <a class='desktop jumpLink' href='#home'>TigerCharts</a> <!-- replace with logo -->
-            <a class='desktop jumpLink active' href='#topEmployers'>Top Employers</a>
+            <a class='desktop jumpLink active' href='#home'>TigerCharts</a> <!-- replace with logo -->
+            <a class='desktop jumpLink' href='#topEmployers'>Top Employers</a>
             <a class='desktop jumpLink' href='#employmentMap'>Employment Map</a>
             <a class='desktop jumpLink' href='#chart_top_employed_majors'>Top Employed Majors</a>
             <a class='desktop jumpLink' href='#trends'>Employer Trends</a>
@@ -140,7 +140,7 @@
             <!-- TigerCharts collapsed text -->
             <h2 class='mobile mob-nav-header' style='font-size: 24px; text-align: left; color: white; padding:0; margin: 0; position: relative; top: -5px; font-weight: 300'>TigerCharts</h2>
             <div id="mobile-nav">
-                <a class='mobile jumpLink active' href='#topEmployers'>Top Employers</a>
+                <a class='mobile jumpLink' href='#topEmployers'>Top Employers</a>
                 <a class='mobile jumpLink' href='#employmentMap'>Employment Map</a>
                 <a class='mobile jumpLink' href='#chart_top_employed_majors'>Top Majors</a>
                 <a class='mobile jumpLink' href='#trends'>Employer Trends</a>
@@ -156,7 +156,7 @@
             </div>
         </div>    
         <div class='blue-fill'></div>
-        <div class='bg-image' style='background-image: url(./images/JT.jpg)'>
+        <div class='bg-image' style='background-image: url(./images/companies.jpg)'>
             <h1 class="center-vertical">Top Employers</h1>
         </div>
         <div class="card-content grey-text text-darken-3" id="topEmployers">
@@ -164,20 +164,20 @@
         </div>
         <div id="chart_top_employed_majors"></div>
         <div class='blue-fill'></div>
-        <div class='bg-image' style='background-image: url(./images/JT.jpg)'>
+        <div class='bg-image' style='background-image: url(./images/travel.png)'>
             <h1 class="center-vertical">Employment Map</h1>
         </div>
         <div class="card-content grey-text text-darken-3" id="employmentMap">
             <div id="map_employment"></div>
         </div>
         <div class='blue-fill'></div>
-        <div class='bg-image' style='background-image: url(./images/JT.jpg)'>
+        <div class='bg-image' style='background-image: url(./images/trends.jpg)'>
             <h1 class="center-vertical">Employer Trends</h1>
         </div>
         <div class="card-content grey-text text-darken-3" id="trends">
             <div id="chart_employer_trends"></div>
         </div>
         <div class='blue-fill'></div>
-        <div class='bg-image' style='background-image: url(./images/JT.jpg)'></div>
+        <div class='bg-image' style='background-image: url(./images/rit.jpg)'></div>
     </body>
 </html>
