Renamed Top Employment by Major, added imaged to git

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <!-- NavBar elements for desktops -->
             <a class='desktop jumpLink active' href='#home'>TigerCharts</a> <!-- replace with logo -->
             <a class='desktop jumpLink' href='#topEmployers'>Top Employers</a>
+            <a class='desktop jumpLink' href='#chart_top_employed_majors'>Employment by Major</a>
             <a class='desktop jumpLink' href='#employmentMap'>Employment Map</a>
-            <a class='desktop jumpLink' href='#chart_top_employed_majors'>Top Employed Majors</a>
             <a class='desktop jumpLink' href='#trends'>Employer Trends</a>
             
             <!-- Collapsed navbar that will show for mobile devices -->
@@ -142,7 +142,7 @@
             <div id="mobile-nav">
                 <a class='mobile jumpLink' href='#topEmployers'>Top Employers</a>
                 <a class='mobile jumpLink' href='#employmentMap'>Employment Map</a>
-                <a class='mobile jumpLink' href='#chart_top_employed_majors'>Top Majors</a>
+                <a class='mobile jumpLink' href='#chart_top_employed_majors'>Majors</a>
                 <a class='mobile jumpLink' href='#trends'>Employer Trends</a>
             </div>
         </div>
