Added info tooltips to all charts

--- a/index.html
+++ b/index.html
@@ -160,7 +160,13 @@
             <h1 class="center-vertical">Top Employers</h1>
         </div>
         <div class="card-content grey-text text-darken-3" id="topEmployers">
+            <div class="help-tip">
+	            <p>These charts show the distribution of majors hired for the top 5 hiring companies.</p>
+            </div>
             <div id="chart_top_employers"></div>
+        </div>
+        <div class="help-tip">
+            <p>This list shows the total number of Co-Ops divided by major.</p>
         </div>
         <div id="chart_top_employed_majors"></div>
         <div class='blue-fill'></div>
@@ -168,6 +174,9 @@
             <h1 class="center-vertical">Employment Map</h1>
         </div>
         <div class="card-content grey-text text-darken-3" id="employmentMap">
+            <div class="help-tip">
+	            <p>This map shows the number of reported Co-Ops in each state.</p>
+            </div>
             <div id="map_employment"></div>
         </div>
         <div class='blue-fill'></div>
@@ -175,6 +184,9 @@
             <h1 class="center-vertical">Employer Trends</h1>
         </div>
         <div class="card-content grey-text text-darken-3" id="trends">
+            <div class="help-tip">
+	            <p>This is a chart. ************FILL*******************</p>
+            </div>
             <div id="chart_employer_trends"></div>
         </div>
         <div class='blue-fill'></div>
