Separated Employment by major into own chart w/ Parallax

--- a/index.html
+++ b/index.html
@@ -165,10 +165,17 @@
             </div>
             <div id="chart_top_employers"></div>
         </div>
-        <div class="help-tip">
+        <div class='blue-fill'></div>
+        <div class='bg-image' style='background-image: url(./images/code.jpg)'>
+            <h1 class="center-vertical">Employent by Major</h1>
+        </div>
+        <div class="card-content grey-text text-darken-3" id="employmentMap">
+            <div class="help-tip">
             <p>This list shows the total number of Co-Ops divided by major.</p>
         </div>
-        <div id="chart_top_employed_majors"></div>
+            <div id="chart_top_employed_majors"></div>
+        </div>
+        
         <div class='blue-fill'></div>
         <div class='bg-image' style='background-image: url(./images/travel.png)'>
             <h1 class="center-vertical">Employment Map</h1>
