--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             
             <!-- Collapsed navbar that will show for mobile devices -->
             <!-- Hamburger -->
-            <a href="#" data-activates="mobile-demo" class="button-collapse" id="hamburger-menu"><i class="material-icons">menu</i></a>
+            <a data-activates="mobile-demo" class="button-collapse" id="hamburger-menu"><i class="material-icons">menu</i></a>
             <!-- TigerCharts collapsed text -->
             <h2 class='mobile mob-nav-header' style='font-size: 24px; text-align: left; color: white; padding:0; margin: 0; position: relative; top: -5px; font-weight: 300'>TigerCharts</h2>
             <div id="mobile-nav">
@@ -159,17 +159,17 @@
         <div class='bg-image' style='background-image: url(./images/companies.jpg)'>
             <h1 class="center-vertical">Top Employers</h1>
         </div>
-        <div class="card-content grey-text text-darken-3" id="topEmployers">
-            <div class="help-tip">
+        <div class="help-tip">
 	            <p>These charts show the distribution of majors hired for the top 5 hiring companies.</p>
             </div>
+        <div class="card-content grey-text text-darken-3" id="topEmployers">
             <div id="chart_top_employers"></div>
         </div>
         <div class='blue-fill'></div>
         <div class='bg-image' style='background-image: url(./images/code.jpg)'>
             <h1 class="center-vertical">Employent by Major</h1>
         </div>
-        <div class="card-content grey-text text-darken-3" id="employmentMap">
+        <div class="card-content grey-text text-darken-3" id="chart_top_employed_majors">
             <div class="help-tip">
                 <p>This list shows the total number of Co-Ops divided by major.</p>
             </div>
