Added top and bottom margins to map

--- a/index.html
+++ b/index.html
@@ -173,11 +173,14 @@
         <div class='bg-image' style='background-image: url(./images/travel.png)'>
             <h1 class="center-vertical">Employment Map</h1>
         </div>
+        <div class="help-tip">
+	            <p>This map shows the number of reported Co-Ops in each state.</p>
+            </div>
         <div class="card-content grey-text text-darken-3" id="employmentMap">
+            <div id="map_employment"></div>
             <div class="help-tip">
 	            <p>This map shows the number of reported Co-Ops in each state.</p>
             </div>
-            <div id="map_employment"></div>
         </div>
         <div class='blue-fill'></div>
         <div class='bg-image' style='background-image: url(./images/trends.jpg)'>
