--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
         <!-- Import Roboto Font -->
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
         <script>
+            //height of the nav bar
+            var navHeight = 0;
             //define the ready function which will be called when the page is ready
             ready = function() {
+                navHeight = $(".nav").height();
                 //handles calculating spacing variables based on window dimensions (ie. center-vertical)
                 function e() {
                     $(".page").outerHeight($(window).height()), 
@@ -104,7 +107,7 @@
                     e.preventDefault();
                     //animate scrolling the page to the top of the element minus the height of the nav bar (.6 sec)
                     $("body, html").animate({ 
-                        scrollTop: $( $(this).attr('href') ).offset().top - $(".nav").height() 
+                        scrollTop: $( $(this).attr('href') ).offset().top - navHeight
                     }, 600);
                 });
             }, 
